# pyrog

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-local.yaml  docker-compose.yaml  main.py  pyproject.toml  settings.py  sqlite.py
alembic/: env.py
alembic/versions/: 2024_01_04_1455-9b7405a30905_create_new_tables.py  2024_01_04_1605-f3a236506a1d_add_relationship.py  2024_01_05_2016-8a55d0288387_update_users_table.py  2024_01_06_1258-d40c63d7bdd8_update_pie_table.py
api/: handlers.py  models.py
api/pies/: crud.py  dependencies.py  schemas.py  views.py
api/profiles/: crud.py  schemas.py  views.py
api/users/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
db/: __init__.py  config.py  dals.py  models.py  session.py
db/models/: __init__.py  pie.py  profile.py  session.py  user.py
demo/: crud.py
demo/auth/: jwt_auth.py  views.py
migrations/: env.py
migrations/versions/: aec108a1ad5c_create_table_for_users.py
tests/: conftest.py  pytest.ini  test.py  test_handlers.py  test_pie.py  test_user.py
tests/helpers/: data.py
tests/src/base_classes/: pyenum.py  response.py
tests/src/enums/: __init__.py  global_enums.py  user_enums.py
tests/src/generators/: player.py  player_localozation.py
tests/src/schemas/: computer.py  pie.py
tests_acceptance/: configuration.py  conftest.py  db.py  tables.py
tests_acceptance/pies/: conftest.py  test_pie.py
tests_acceptance/src/base_classes/: __init__.py  response.py
tests_acceptance/src/generators/: player.py
tests_acceptance/src/schemas/: computer.py  pie.py  pie_jsonschema.py
