[tool.poetry]
name = "pyrog"
version = "0.1.0"
description = ""
authors = ["9 Kolychev <9kolychev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pydantic = {extras = ["email"], version = "^2.0.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"
envparse = "^0.2.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
